# agents

./: .gitignore  AGENTS.md  README.md  pyproject.toml
deploy/: iris-discord.env.example  iris-discord.service
docs/: gmail-oauth-setup.md  noble-ridge-agent-platform-architecture.md
src/noble_ridge_agents/: __init__.py  cli.py  content_safety.py  discord_gateway.py  fixtures.py
src/noble_ridge_agents/agents/: iris.py
src/noble_ridge_agents/jobs/: __init__.py  schema.py  sqlite_store.py  store.py
src/noble_ridge_agents/policy/: __init__.py  permissions.py
src/noble_ridge_agents/tools/: gmail.py
tests/: test_content_safety.py  test_discord_gateway.py  test_iris_agent.py  test_iris_cli.py  test_iris_cli_real_gmail.py  test_iris_cli_workflows.py  test_job_store.py  test_policy.py  test_real_gmail_client.py  test_sqlite_job_store.py
